--- a/src/main/resources/templates/employee/addEmployee.html
+++ b/src/main/resources/templates/employee/addEmployee.html
@@ -8,7 +8,7 @@
 
 
 <div class="container " >
-  <div class="row text-center formManagement border-info" >
+  <div class="row text-center " >
     <div class="col" >
       <a class="btn btn-outline-info" href="/home" >
         Back To Home
