--- a/src/main/resources/templates/employee/employee-detail.html
+++ b/src/main/resources/templates/employee/employee-detail.html
@@ -9,7 +9,7 @@
 
 <!--heading Area-->
 <div class="container-fluid  form-Border">
-    <div class="row text-center formManagement border-info">
+    <div class="row text-center ">
         <div class="col">
             <a class="btn btn-outline-info" href="/home">&nbsp; Back To Home
             </a>
