--- a/src/main/resources/templates/fragments/unicodeTamil.html
+++ b/src/main/resources/templates/fragments/unicodeTamil.html
@@ -32,10 +32,10 @@
                 <div class="modal-body">
                     <!--Translator content-->
                     <div class="container-fluid form-row">
-                        <div class="bg-dark  form-group">
+                        <div class="form-group">
                             <form name="txtBoxTamilish" class="form ">
                                 <div class="form-row text-center">
-                                    <label class="TableText " for="tamilishWrite">
+                                    <label class="TableText h2" for="tamilishWrite">
                                         Arial (ஏரியல்)
                                     </label>
                                     <textarea id="tamilishWrite" onKeyUp="startText();"
@@ -50,7 +50,7 @@
                                     <input type="reset" value="Reset" class="btn btn-md btn-warning "/>
                                 </div>
                                 <div class="form-row">
-                                    <label for="tamilCode" class="TableText">
+                                    <label for="tamilCode h2" class="TableText">
                                         Unicode (யுனிகோட்)
                                     </label>
                                     <textarea id="tamilCode"
