--- a/src/main/resources/templates/fragments/unicodeSinhala.html
+++ b/src/main/resources/templates/fragments/unicodeSinhala.html
@@ -31,11 +31,11 @@
                 <div class="modal-body">
                     <!--Translator content-->
                     <div class="container-fluid form-row">
-                        <div class="col-6 bg-dark  form-group">
+                        <div class="col-6   form-group">
                             <form name="txtBox" id="txtBox" class="form">
                                 <div class="form-group">
                                     <div class="form-row">
-                                        <label for="singlish" class=" float-left control-label">Transliterated (SinGlish
+                                        <label for="singlish" class="h2 float-left control-label">Transliterated (SinGlish
                                                                                                 Scheme)</label>
                                     </div>
                                 </div>
@@ -56,7 +56,7 @@
                                 <div class="form-group">
                                     <div class="form-row">
                                         <div class="container-fluid">
-                                            <label for="uni" class="col-6 float-left control-label">Unicode
+                                            <label for="uni" class="col-6 h2 float-left control-label">Unicode
                                                                                                     (යුනිකෝඩ්)</label>
                                         </div>
                                         <div class="container-fluid">
