--- a/src/main/resources/templates/institute/institute-detail.html
+++ b/src/main/resources/templates/institute/institute-detail.html
@@ -9,7 +9,7 @@
 
 <!--heading Area-->
 <div class="container-fluid  ">
-    <div class="row text-center formManagement border-info">
+    <div class="row text-center ">
         <!--View List Button-->
         <div class="col">
             <a href="/institute" class="btn btn-primary">
@@ -33,8 +33,8 @@
     </div>
 </div>
 <!--details-->
-<div data-th-fragment="instituteDetailsFragment" class="container-fluid bg-info ">
-    <div class="col-sm-12 flex-column ">
+<div  class="container-fluid bg-info ">
+    <div class="col-sm-12 flex-column " data-th-fragment="instituteDetailsFragment">
         <div class="row">
             <div class="form-group col-md-12 col-sm-12 text-center flex-column ">
                 <!--id-->
