--- a/src/main/resources/templates/offence/addOffence.html
+++ b/src/main/resources/templates/offence/addOffence.html
@@ -9,7 +9,7 @@
 
 <!--Heading Area-->
 <div class="container-fluid  ">
-    <div class="row text-center formManagement border-info">
+    <div class="row text-center ">
         <!--View list Button-->
         <div class="col">
             <a class="btn btn-primary" href="/offence">
