--- a/src/main/resources/templates/punishment/punishment-detail.html
+++ b/src/main/resources/templates/punishment/punishment-detail.html
@@ -9,7 +9,7 @@
 
 <!--heading Area-->
 <div class="container-fluid  ">
-    <div class="row text-center formManagement border-info">
+    <div class="row text-center ">
         <!--View List Button-->
         <div class="col">
             <a class="btn btn-primary" href="/punishment">
