--- a/src/main/resources/templates/punishment/punishment.html
+++ b/src/main/resources/templates/punishment/punishment.html
@@ -9,7 +9,7 @@
 
 <!--Heading Area-->
 <div class="container-fluid  ">
-    <div class="row text-center formManagement border-info">
+    <div class="row text-center ">
         <!-- New Institute Button-->
         <div class="col">
             <a class="btn btn-success" href="/punishment/add"><i class="fa fa-user-plus" style="font-size: 20px"></i>&nbsp;&nbsp;New</a>&nbsp;
