--- a/src/main/resources/templates/user/user-detail.html
+++ b/src/main/resources/templates/user/user-detail.html
@@ -9,7 +9,7 @@
 
 <!--Page header -->
 <div class="container-fluid bg-secondary form-Border">
-    <div class="row text-center formManagement border-info">
+    <div class="row text-center ">
         <div class="col">
             <a class="btn btn-primary" href="/home">
                 <i class="fa fa-home" style="font-size: 20px"></i> &nbsp; Home
