--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -8,7 +8,7 @@
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
 <div class="container-fluid bg-secondary form-Border">
-    <div class="row text-center formManagement border-info">
+    <div class="row text-center ">
         <div class="col">
             <a class="btn btn-success" id="newUser" data-th-href="${'/user/add'}">
                 <i class="fa fa-user-plus" style="font-size: 18px;"></i> &nbsp; Add User </a>
