All list Employee institute show list was added

--- a/src/main/resources/templates/qualification/qualification-detail.html
+++ b/src/main/resources/templates/qualification/qualification-detail.html
@@ -17,7 +17,7 @@
           <div class="card" >
             <div class="card-body" >
               <h4 >Qualification </h4 >
-              <div class="container-fluid" data-th-fragment="qualificationDetail" >
+              <div class="container-fluid" data-th-fragment="qualificationDetailsFragment" >
                 <table class="table table-hover table-borderless" >
                   <tbody >
                   <tr >
