--- a/src/main/resources/templates/employeeInstitute/employeeInstitute.html
+++ b/src/main/resources/templates/employeeInstitute/employeeInstitute.html
@@ -25,7 +25,7 @@
     <div class="col" >
       <h4 class="text-info text-center" >
         <strong >
-          Qualification Management
+          Employee Institute Management
         </strong >
       </h4 >
     </div >
@@ -33,27 +33,36 @@
 </div >
 <div class="container-fluid  text-center" >
 
-  <table class="table table-hover table-striped" id="myTable" data-th-if="${not #lists.isEmpty(qualifications)}" >
+  <table class="table table-hover table-striped" id="myTable" data-th-if="${not #lists.isEmpty(employeeInstitutes)}" >
     <thead class="thead-inverse" >
     <tr >
       <th >Index</th >
       <th >Employee Name</th >
-      <th >Qualification/Course</th >
+      <th >Institute Name</th >
+      <th >Working Start At</th >
+      <th >Working End At</th >
+      <th > Transfer Reason</th >
       <th >Modify</th >
     </tr >
     </thead >
     <tbody >
-    <tr data-th-each="qualification, rowCount : ${qualifications}" scope="row" >
+    <tr data-th-each="employeeInstitute, rowCount : ${employeeInstitutes}" scope="row" >
       <th data-th-text="${rowCount.count}" ></th >
-      <th data-th-text="${qualification.employee.name}" ></th >
-      <th data-th-text="${qualification.name}" ></th >
+      <th data-th-text="${employeeInstitute.employee.name}" ></th >
+      <th data-th-text="${employeeInstitute.institute.name}" ></th >
+      <th data-th-text="${{employeeInstitute.startAt}}" ></th >
+      <th data-th-text="${{employeeInstitute.endAt}}" ></th >
+      <th data-th-text="${employeeInstitute.instituteChangeReason.instituteChangeReason}" > </th >
       <th >
         <a class="btn btn-primary btn-sm" id="qualificationEdit"
-           data-th-href="${'/qualification/edit/' + qualification.id}" ><i
+           data-th-href="${'/employeeInstitute/edit/' + employeeInstitute.id}" ><i
               class="fa fa-edit" ></i >&nbsp;Edit</a >
-        <a class="btn btn-danger btn-sm"            data-th-href="${'/qualification/remove/' + qualification.id}"
+        <a class="btn btn-danger btn-sm" id="qualificationRemove"
+           data-th-href="${'/employeeInstitute/remove/' + employeeInstitute.id}"
            data-th-if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}"
-           data-th-click="if(!(confirm('Are you want to delete this civilStatus ?'))) return false"        ><i              aria-hidden="true" class="fa fa-trash" ></i >
+           data-th-click="if(!(confirm('Are you want to delete this civilStatus ?'))) return false"
+        ><i
+              aria-hidden="true" class="fa fa-trash" ></i >
           Delete</a >
 
       </th >
@@ -62,19 +71,19 @@
   </table >
 
   <!--if empty list-->
-  <div class="row" id="qualificationNotList" data-th-if="${ #lists.isEmpty(qualifications)}" >
+  <div class="row" id="qualificationNotList" data-th-if="${ #lists.isEmpty(employeeInstitutes)}" >
     <div class="alert alert-warning alert-dismissible fade show" role="alert" >
       <button type="button" class="close" data-dismiss="alert" aria-label="Close" >
         <span aria-hidden="true" >&times;</span >
       </button >
       <h3 class="text-center text-danger" >
-        <strong >There is no qualification upto know please add qualification to the system
-                 using add qualification button.
+        <strong >There is no employee institute upto know please add employeeInstitute to the system
+                 using add employee institute button.
         </strong >
       </h3 >
     </div >
   </div >
-  <!--Show saved qualification-->
+  <!--Show saved employeeInstitute-->
   <div class="row" data-th-if="${qualificationDetail!=null}" >
     <div class="col-sm-12" >
       <div class="alert alert-success alert-dismissible fade show" role="alert" >
@@ -82,7 +91,7 @@
           <span aria-hidden="true" >&times;</span >
         </button >
         <div class="container" >
-          <div data-th-replace="~{qualification/qualification-detail :: qualificationDetailsFragment}" ></div >
+          <div data-th-replace="~{employeeInstitute/employeeInstitute-detail :: employeeInstituteDetailsFragment}" ></div >
         </div >
       </div >
     </div >
