Add employee institute was and some code was changed

--- a/src/main/resources/templates/employee/addEmployee.html
+++ b/src/main/resources/templates/employee/addEmployee.html
@@ -270,8 +270,7 @@
                 <option value="" >Please select</option >
                 <option data-th-each="employeeStatuss : ${employeeStatus}"
                         data-th-text="${employeeStatuss.employeeStatus}"
-                        data-th-value="${employeeStatuss}"
-                        data-th-selected="${employeeStatuss==employee.employeeStatus?'selected':'unselected'}" ></option >
+                        data-th-value="${employeeStatuss}"></option >
               </select >
             </div >
           </div >
