Add employee institute was and some code was changed

--- a/src/main/resources/templates/employeeInstitute/addEmployeeInstitute.html
+++ b/src/main/resources/templates/employeeInstitute/addEmployeeInstitute.html
@@ -138,6 +138,22 @@
                             </span >
         </div >
       </div >
+      <!--Sinhala modal button and modal tamil button-->
+      <div class="form-row text-right" >
+        <div class="col-md-4" >
+          <!--Sinhala modal button -->
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-xl" ><i
+                class="fas fa-language" ></i > &nbsp;Singlish to Sinhala
+          </button >
+
+        </div >
+        <div class="col-md-4" >
+          <!-- modal tamil button -->
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#bd-example-modal-xl" ><i
+                class="fas fa-language" ></i > &nbsp;Tamilish to Tamil
+          </button >
+        </div >
+      </div >
       <div class="form-group col-md-12 col-sm-12 text-left flex-column " >
         <!--Button-->
         <div class="form-group col-md-12 col-sm-12 text-center flex-column " >
@@ -180,8 +196,8 @@
             }
         }
     }
-
-
 </script >
+<div data-th-replace="~{fragments/unicodeSinhala :: unicodeSinhalaFragment}" ></div >
+<div data-th-replace="~{fragments/unicodeTamil :: unicodeTamilFragment}" ></div >
 </body >
 </html >
