Employee find was added to all method

--- a/src/main/resources/templates/commendation/commendation.html
+++ b/src/main/resources/templates/commendation/commendation.html
@@ -11,9 +11,8 @@
 <div class="container-fluid  ">
     <div class="row text-center ">
         <!-- New Institute Button-->
-        <div class="col">
-            <a class="btn btn-success" href="/commendation/add"><i class="fa fa-user-plus" style="font-size: 20px"></i>&nbsp;&nbsp;New</a>&nbsp;
-        </div>
+        <a class="btn btn-info" href="/employee/findAll" ><i class="fa fa-plus" ></i >
+            &nbsp;Add New</a >
         <!-- List Name-->
         <div class="col">
             <h2 class="text-light text-center">
