--- a/src/main/resources/templates/qualification/qualification.html
+++ b/src/main/resources/templates/qualification/qualification.html
@@ -16,7 +16,7 @@
     </div >
 
     <div class="col" >
-      <a class="btn btn-info" href="/employee" ><i class="fa fa-plus" ></i >
+      <a class="btn btn-info" href="/employee/findAll" ><i class="fa fa-plus" ></i >
         &nbsp;Add New</a >
     </div >
 
